# HRUs

./: .gitignore  AGENTS.md  common.py  pyproject.toml  train.py  train_hf.py  train_recursive.py  wandb_utils.py
experiment/: 10_fresh_rule_split.py  11_fresh_rule_split_full_completion.py  12_hf_fol.py  13_zipf_demo.py  14_compute_optimal.py  15_cluster_demo.py  16_ab_demo.py  17_rank_demo.py  1_playground.py  1_small_fol_sweep.py  2_sweep.py  3_surgery.py  4_normative_ood.py  5_arch_sweep.py  6_layer_sweep.py  7_layer_fol_sweep.py  8_fol_icl.py  9_disjoint_rule_split.py
journal/: 2026-02-05-normative-ood-pipeline-dry-run.md  2026-02-16-layered-axiom-task-offline-online.md  2026-02-21-ssm-performance-kernel-integration.md  2026-02-23-fol-layertask-generalization-plan.md  2026-02-24-layer-task-tool-use-continuum.md  2026-02-26-fol-sparsity-sensitivity-reproduction.md  2026-03-03-maze-fol-rule-bank-design.md  2026-03-05-fresh-icl-eval-bug.md  2026-03-13-theoretical-analysis-tool-retrieval.md  2026-03-23-data-generation-infrastructure.md  TODO.md
model/: architecture.py  compute.py  eval_adapters.py  gated_delta_net.py  mlp.py  mup.py  output.py  recursive.py  ssm.py  ssm_bonsai.py  ssm_kernels.py  transformer.py
task/: fol_task_factory.py  layer.py  layer_axiom.py  layer_fol.py  layer_fol_common.py  layer_fol_demos.py  layer_fol_eval.py  layer_fol_eval_inputs.py  layer_fol_stats.py  layer_fol_task.py  layer_interact.py  layer_interact_fol.py  lean_ar.py  prop.py  prop_ar.py
tests/: __init__.py  test_10_fresh_rule_split_utils.py  test_9_disjoint_rule_split_utils.py  test_arch_sweep_analysis.py  test_arch_sweep_data_utils.py  test_architecture.py  test_bolt.py  test_compute.py  test_compute_dims_stress.py  test_elem.py  test_env.py  test_experiment_common_utils.py  test_finite.py  test_fol_rule_bank.py  test_fol_task_factory.py  test_generate.py  test_generate_imply.py  (+40 more)
(+152 files in other folders)
